@@ -12,6 +12,7 @@ Version 1.7.1+svn:
 
   * User interface
     * Add an icon to show whether or not the user finished a campaign.
+    * Fixed bug #13831: Bug with team labels
 
 
 Version 1.7.1:
